# ASSIP-agentic-currency-simulation

./: .env.example  README.md  pyproject.toml  requirements.txt
configs/agent_profiles/: bank.yaml  consumer.yaml  institution.yaml  investor.yaml  merchant.yaml
configs/blockchains/: arbitrum.yaml  base.yaml  ethereum.yaml  solana.yaml
configs/currencies/: DAI.yaml  EURC.yaml  EURT.yaml  FDUSD.yaml  PAXG.yaml  Tokenized_Deposits.yaml  USDC.yaml  USDT.yaml  XAUT.yaml
configs/scenarios/: banking_crisis.yaml  baseline.yaml  fee_spike.yaml  gold_boom.yaml  inflation_shock.yaml
configs/simulation/: large_scale.yaml  medium_test.yaml  small_test.yaml
database/: models.py  repository.py  session.py
database/migrations/: seed_data.py
e2b/: experiment_dispatcher.py  result_collector.py  sandbox_cleanup.py  sandbox_launcher.py  sandbox_manager.py
experiments/: experiment_001_baseline.py  experiment_002_inflation.py  experiment_003_gold_preference.py  experiment_004_bank_run.py  experiment_005_model_comparison.py  experiment_006_fee_shock.py  experiment_007_governance_prompting.py  experiment_008_liquidity_vs_fees.py  experiment_009_cross_border.py  experiment_010_chain_choice.py  experiment_011_compliance_effect.py
metrics/: adoption_curves.py  chain_selection.py  compliance_effects.py  currency_usage.py  gas_fee_sensitivity.py  governance_preference.py  hallucinations.py  liquidity_sensitivity.py  transaction_stats.py  wandb_logger.py  wealth_distribution.py
sandbox/: result_collector.py  sandbox_cleanup.py  sandbox_launcher.py  sandbox_manager.py
scripts/: calibrate_currency_configs.py
src/agents/: agent_factory.py  bank_agent.py  base_agent.py  buyer_agent.py  investor_agent.py  (+5 more)
tests/: test_agents.py  test_currency_conversion.py  test_hallucinations.py  test_negotiation.py  test_simulation.py  test_transactions.py
(+52 files in other folders)
